Modification on the department services
Update the test methods for the DepartmentControllerTest and DepartmentServiceTest.java